<resources>
    <string name="app_name">SignUp</string>
    <string name="welcome">WELCOME!!!</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="signup">SignUP</string>
    <string name="user_id">User Id</string>
    <string name="name">Name</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="re_enter_password">Re-enter Password</string>
</resources>